# guile-dear-imgui

./: .guix-channel  guile.hpp  guile_dear_imgui.cpp  guile_dear_imgui.hpp  guile_dear_imgui_sdl2.cpp  guile_glfw.cpp  guix.scm  manifest.scm  meson.build  meson_options.txt  pre-inst-env.in  test-with-glfw.scm  test.scm
.guix/modules/: guile-dear-imgui-package.scm
examples/: test-with-glfw.scm  test.scm
modules/: glfw.scm  imgui.scm  meson.build
modules/imgui/: draw.scm  inputs.scm  item.scm  meson.build  viewport.scm  window.scm
modules/imgui/backends/: gl.scm  glfw3.scm  meson.build  sdl2.scm
src/: backend_gl.cpp  backend_glfw3.cpp  backend_sdl2.cpp  guile.hpp  guile_dear_imgui.cpp  guile_glfw.cpp  meson.build
subprojects/: imgui.wrap
tests/: draw.scm  glfw.scm  helper.scm  meson.build  none.scm  sdl2.scm  table.scm  tablebar.scm  tree.scm
